Fixing left clipping in transform on Safari

--- a/src/styles/jobcarousel.scss
+++ b/src/styles/jobcarousel.scss
@@ -12,7 +12,7 @@ $leftrightpadding: 9vw;
 		padding-left: 30px;
 	}
 	.slick-slide {
-		padding: 10px 30px 10px 0px;
+		padding: 10px 15px;
 		.posting {
 			height: 360px;
 			width: 370px;
